Move everything out of "web-app" dir and merge pom files